syntax = "proto3";
package onebot;
import "onebot_base.proto";

message PrivateMessageEvent{
    int64 time = 1;
    int64 self_id = 2;
    string post_type = 3;
    string message_type = 4;
    string sub_type = 5;
//    int32 message_id = 6; // 废弃
    int64 user_id = 7;
    repeated Message message = 8;
    string raw_message = 9;
    int32 font = 10;
    Sender sender = 11;
    MessageReceipt message_id = 12;
    message Sender{
        int64 user_id = 1;
        string nickname = 2;
        string sex = 3;
        int32 age = 4;
    }
    map<string, string> extra = 255;
}

message GroupMessageEvent{
    int64 time = 1;
    int64 self_id = 2;
    string post_type = 3;
    string message_type = 4;
    string sub_type = 5;
//    int32 message_id = 6; // 废弃
    int64 group_id = 7;
    int64 user_id = 8;
    Anonymous anonymous = 9;
    repeated Message message = 10;
    string raw_message = 11;
    int32 font = 12;
    Sender sender = 13;
    MessageReceipt message_id = 14;
    message Anonymous{
        int64 id = 1;
        string name = 2;
        string flag = 3;
    }
    message Sender{
        int64 user_id = 1;
        string nickname = 2;
        string card = 3;
        string sex = 4;
        int32 age = 5;
        string area = 6;
        string level = 7;
        string role = 8;
        string title = 9;
    }
    map<string, string> extra = 255;
}

message GroupUploadNoticeEvent{
    int64 time = 1;
    int64 self_id = 2;
    string post_type = 3;
    string notice_type = 4;
    int64 group_id = 5;
    int64 user_id = 6;
    File file = 7;
    message File{
        string id = 1;
        string name = 2;
        int64 size = 3;
        int64 busid = 4;
        string url = 5;
    }
    map<string, string> extra = 255;
}

message GroupAdminNoticeEvent{
    int64 time = 1;
    int64 self_id = 2;
    string post_type = 3;
    string notice_type = 4;
    string sub_type = 5;
    int64 group_id = 6;
    int64 user_id = 7;
    map<string, string> extra = 255;
}

message GroupDecreaseNoticeEvent{
    int64 time = 1;
    int64 self_id = 2;
    string post_type = 3;
    string notice_type = 4;
    string sub_type = 5;
    int64 group_id = 6;
    int64 operator_id = 7;
    int64 user_id = 8;
    map<string, string> extra = 255;
}

message GroupIncreaseNoticeEvent{
    int64 time = 1;
    int64 self_id = 2;
    string post_type = 3;
    string notice_type = 4;
    string sub_type = 5;
    int64 group_id = 6;
    int64 operator_id = 7;
    int64 user_id = 8;
    map<string, string> extra = 255;
}

message GroupBanNoticeEvent{
    int64 time = 1;
    int64 self_id = 2;
    string post_type = 3;
    string notice_type = 4;
    string sub_type = 5;
    int64 group_id = 6;
    int64 operator_id = 7;
    int64 user_id = 8;
    int64 duration = 9;
    map<string, string> extra = 255;
}

message FriendAddNoticeEvent{
    int64 time = 1;
    int64 self_id = 2;
    string post_type = 3;
    string notice_type = 4;
    int64 user_id = 5;
    map<string, string> extra = 255;
}

message GroupRecallNoticeEvent{
    int64 time = 1;
    int64 self_id = 2;
    string post_type = 3;
    string notice_type = 4;
    int64 group_id = 5;
    int64 user_id = 6;
    int64 operator_id = 7;
//    int32 message_id = 8; // 废弃
    MessageReceipt message_id = 9;
    map<string, string> extra = 255;
}

message FriendRecallNoticeEvent{
    int64 time = 1;
    int64 self_id = 2;
    string post_type = 3;
    string notice_type = 4;
    int64 user_id = 5;
//    int32 message_id = 6; // 废弃
    MessageReceipt message_id = 7;
    map<string, string> extra = 255;
}

message FriendRequestEvent{
    int64 time = 1;
    int64 self_id = 2;
    string post_type = 3;
    string request_type = 4;
    int64 user_id = 5;
    string comment = 6;
    string flag = 7;
    map<string, string> extra = 255;
}

message GroupRequestEvent{
    int64 time = 1;
    int64 self_id = 2;
    string post_type = 3;
    string request_type = 4;
    string sub_type = 5;
    int64 group_id = 6;
    int64 user_id = 7;
    string comment = 8;
    string flag = 9;
    map<string, string> extra = 255;
}